--- a/src/app/transfer/add-transfer/add-transfer.component.html
+++ b/src/app/transfer/add-transfer/add-transfer.component.html
@@ -8,32 +8,38 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <form>
-  <ion-card>
+  <form (ngSubmit)="submitForm()" [formGroup]="reactiveForm" autocomplete="off" novalidate>
+    <ion-card>
       <ion-item>
         <ion-label position="floating">Account holder</ion-label>
-        <ion-input name="account_holder" [(ngModel)]="form.account_holder" [autofocus]="true"></ion-input>
+        <ion-input name="account_holder" formControlName="account_holder"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">IBAN</ion-label>
-        <ion-input name="iban" [(ngModel)]="form.iban"></ion-input>
+        <ion-input name="iban" formControlName="iban"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="floating">Date</ion-label>
-        <ion-input name="date" [(ngModel)]="form.date"></ion-input>
+        <ion-label >Date</ion-label>
+        <ion-datetime-button datetime="datetime"></ion-datetime-button>
+        <ion-modal [keepContentsMounted]="true">
+          <ng-template>
+            <ion-datetime name="date" formControlName="date" locale="es-DE" presentation="date" id="datetime"></ion-datetime>
+          </ng-template>
+        </ion-modal>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Amount</ion-label>
-        <ion-input name="amount" [(ngModel)]="form.amount"></ion-input>
+        <ion-input name="amount" formControlName="amount"></ion-input>
+        <ion-badge slot="end" color="medium" class="ion-margin-top">{{amount.value|currency:'EUR'}}</ion-badge>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Note</ion-label>
-        <ion-textarea name="note" [(ngModel)]="form.note"></ion-textarea>
+        <ion-textarea name="note" formControlName="note"></ion-textarea>
       </ion-item>
     </ion-card>
-    
+
     <div class="ion-margin">
-      <ion-button expand="full" (click)="submitForm()">Create</ion-button>
+      <ion-button expand="full" type="submit">Create</ion-button>
     </div>
   </form>
 </ion-content>
