--- a/src/app/transfer/transfer-item/transfer-item.component.html
+++ b/src/app/transfer/transfer-item/transfer-item.component.html
@@ -1,44 +1,42 @@
-<ion-row *ngIf="transfer">
-  <ion-col>
+<!-- <ion-row *ngIf="transfer">
+  <ion-col size="2" *ngIf="value == 'account_holder'">
     <div>{{transfer.account_holder}}</div>
   </ion-col>
   <ion-col size="2">
-    <div>{{transfer.iban}}</div>
+    <div>{{transfer.iban|ibanFormatter}}</div>
   </ion-col>
-  <ion-col>
-    <div>{{transfer.date|date}}</div>
+  <ion-col size="2">
+    <div>{{transfer.date|date:'yyyy-mm-dd'}}</div>
   </ion-col>
-  <ion-col>
-    <div>{{transfer.amount|currency:'EUR'}}</div>
+  <ion-col size="2">
+    <div>{{transfer.amount.toLocaleString()|currency:'EUR'}}</div>
   </ion-col>
   <ion-col>
     <div>{{transfer.note}}</div>
   </ion-col>
-  <!-- Options -->
   <ion-col class="col ion-text-center" size="2">
-    <ion-button size="small" color="medium" [routerLink]="'/transfer/edit/' + transfer._id">
+    <ion-button size="small" color="medium" [routerLink]="'/transfer/edit/' + transfer.id">
       <ion-icon name="create-outline"></ion-icon>
     </ion-button>
-    <ion-button color="danger" size="small" (click)="isModalOpen = true">
+    <ion-button color="danger" size="small" (click)="presentAlert(transfer.id || '')">
       <ion-icon name="trash-outline"></ion-icon>
     </ion-button>
-    <ion-modal [isOpen]="isModalOpen">
-      <ng-template>
-        <ion-header>
-          <ion-toolbar>
-            <ion-title>Remove Transfer</ion-title>
-          </ion-toolbar>
-        </ion-header>
-        <ion-content class="ion-padding">
-          <h3>Are you sure?</h3>
-          <ion-button color="danger" (click)="findByIdAndRemove(transfer)" size="medium" class="ion-margin-end">
-            Yes, Remove it
-          </ion-button>
-          <ion-button color="medium" (click)="isModalOpen = false" size="medium" class="ion-margin-end">
-            No, Cancel it
-          </ion-button>
-        </ion-content>
-      </ng-template>
-    </ion-modal>
   </ion-col>
-</ion-row>
+</ion-row> -->
+<div *ngIf="transfer">
+  <div *ngIf="value == 'account_holder'">{{transfer.account_holder}}</div>
+  <div *ngIf="value == 'date'">{{transfer.date|date:'yyyy-mm-dd'}}</div>
+  <div *ngIf="value == 'iban'">{{transfer.iban}}</div>
+  <div *ngIf="value == 'amount'">{{transfer.amount.toLocaleString()|currency:'EUR'}}</div>
+  <div *ngIf="value == 'note'" class="note--text">{{transfer.note}}</div>
+  <div *ngIf="value == 'options'">
+    <ion-button size="default" color="danger" (click)="presentAlert(transfer.id || '')">
+      <ion-icon slot="start" name="trash-outline"></ion-icon>
+      Remove
+    </ion-button>
+    <ion-button size="default" color="medium" [routerLink]="'/transfer/edit/' + transfer.id">
+      <ion-icon slot="start" name="create-outline"></ion-icon>
+      Edit
+    </ion-button>
+  </div>
+</div>
