--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+button.alert-button.alert-button-confirm {
+    color: #eb445a
+}
+button.alert-button.alert-button-cancel {
+    color: #92949c
+}
