--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -1,16 +1,33 @@
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>
+      Transfer App
+    </ion-title>
+    <ion-button size="medium" slot="end" class="ion-margin-end" routerLink="/transfer/create" color="primary">Create
+    </ion-button>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="refresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <ion-card>
     <ion-grid>
       <ion-row class="row">
-        <ion-col size="2"
-          *ngFor="let header of headers;">
+        <ion-col size="2" *ngFor="let header of headers;">
           <h6 class="ion-bold">{{header}}</h6>
         </ion-col>
         <ion-col class="ion-text-center" size="2">
           <h6>-</h6>
         </ion-col>
       </ion-row>
-      <div class="row" *ngFor="let transfer of transfers; let i = index">
-        <app-transfer-item (getAll)="getAll()" (showToast)="onShowToast($event)" item-key="i" [transfer]="transfer"></app-transfer-item>
+      <div class="row" *ngFor="let transfer of transfers$ | async; let i = index">
+        <app-transfer-item (getAll)="getAll()" (showToast)="onShowToast($event)" item-key="i" [transfer]="transfer">
+        </app-transfer-item>
       </div>
     </ion-grid>
   </ion-card>
+  
+</ion-content>
